--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Umar Shaik<ufshaikc@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.16",
     "@chakra-ui/react": "^1.6.10",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
@@ -21,6 +22,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@chakra-ui/theme-tools": "^1.2.2",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.2",
     "prettier": "^2.4.1"
